<resources>
    <string name="app_name">Game 1</string>
    <string name="startbtn">Start</string>
    <string name="practicebtn">Practice</string>
    <string name="settingsbtn">Settings</string>
    <string name="enote">E</string>
    <string name="fnote">F</string>
    <string name="gnote">G</string>
    <string name="anote">A</string>
    <string name="finish">Finish</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="onoroff">On/Off</string>
    <string name="help">Help</string>
    <string name="view">View</string>
</resources>