<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="450dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@drawable/my_custom_background"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="163dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/close_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_gravity="end"
            android:layout_marginStart="400dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/circle_shape"
            android:gravity="center"
            android:text="X"
            android:textColor="#fff"
            android:textSize="20dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="107dp">

    <ImageView
        android:id="@+id/soundicon"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:src="@drawable/sound"
        android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/soundtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:layout_toRightOf="@+id/soundicon"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font"
            android:textColor="@color/black"
            android:textSize="20dp"/>


        <Button
            android:id="@+id/soundbutton"

            android:layout_marginTop="37dp"
            android:layout_marginLeft="57dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#6f373c"
            android:text="@string/onoroff"
            android:fontFamily="@font/font"
            android:textColor="#FFB639"
            app:strokeWidth="2dp"
            android:checked="true"
            />

        <ImageView
            android:id="@+id/helpicon"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_below="@+id/soundicon"
            android:layout_marginTop="23dp"
            android:src="@drawable/help" />

        <TextView
            android:id="@+id/helptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:layout_toRightOf="@+id/helpicon"
            android:layout_below="@+id/soundbutton"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/font"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <Button
            android:id="@+id/helpbutton"
            android:layout_marginTop="108dp"
            android:layout_marginLeft="57dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#6f373c"
            android:text="@string/view"
            android:fontFamily="@font/font"
            android:textColor="#FFB639"
            app:strokeWidth="2dp" />




    </RelativeLayout>

</LinearLayout>