<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityPractice"
    android:orientation="horizontal"
    android:background="@drawable/battle1">

    <!-- bilog -->

    <!-- E na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/yup"
        android:src="@drawable/bilog"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="120dp" />

    <!-- F na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/yupp"
        android:src="@drawable/bilog"
        android:layout_marginTop="117dp"
        android:layout_marginLeft="165dp"/>

    <!-- G na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/yuppp"
        android:src="@drawable/bilog"
        android:layout_marginTop="106dp"
        android:layout_marginLeft="210dp" />

    <!-- A na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/yupppp"
        android:src="@drawable/bilog"
        android:layout_marginTop="97dp"
        android:layout_marginLeft="260dp"/>

    <!-- Music Sheet -->

    <ImageView
        android:id="@+id/clef"
        android:layout_width="350dp"
        android:layout_height="160dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/clef" />

    <!-- Land -->

    <ImageView
        android:background="@drawable/land"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/land"/>

    <!-- MC -->

    <ImageView
        android:id="@+id/mcright1"
        android:src="@drawable/mcright1"
        android:layout_marginBottom="-20dp"
        android:layout_marginLeft="150dp"
        android:layout_above="@+id/land"
        android:layout_width="90dp"
        android:layout_height="90dp"/>

    <!-- Dummy -->

    <ImageView
        android:id="@+id/dummyleft2"
        android:layout_above="@+id/land"
        android:src="@drawable/dummyleft2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="-11dp"
        android:layout_width="90dp"
        android:layout_height="90dp" />


    <!-- Notes Buttons -->

    <RelativeLayout
        android:layout_alignBottom="@+id/land"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <!-- E Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:hint="@string/enote"
            android:background="@drawable/oval"
            android:id="@+id/enote"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="50dp"
            />

        <!-- F Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/oval"
            android:hint="@string/fnote"
            android:id="@+id/fnote"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/enote"
            android:layout_marginLeft="4dp"
            />

        <!-- G Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/oval"
            android:hint="@string/gnote"
            android:id="@+id/gnote"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/fnote"
            android:layout_marginLeft="4dp" />

        <!-- A Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/oval"
            android:hint="@string/anote"
            android:id="@+id/anote"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/gnote"
            android:layout_marginLeft="4dp"
            />

    </RelativeLayout>

    <!-- Buttons At The Top -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true">

        <!-- Pause Button -->
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:id="@+id/pause"
            android:background="@drawable/pause"
            app:strokeWidth="2dp"
            android:onClick="previous"
            android:layout_marginLeft="5dp"
            />


        <!-- Finish Button -->
        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/pause"
            android:id="@+id/finish"
            android:background="@drawable/check"
            android:backgroundTint="@color/black"
            app:strokeWidth="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="35dp"
            />

    </RelativeLayout>

</RelativeLayout>