<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityPractice"
    android:orientation="horizontal"
    android:background="@drawable/battle1">

    <!-- bilog -->

    <!-- E na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/Ebilog"
        android:src="@drawable/bilog"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="310dp" />

    <!-- F na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/Fbilog"
        android:src="@drawable/bilog"
        android:layout_marginTop="117dp"
        android:layout_marginLeft="350dp"/>

    <!-- G na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/Gbilog"
        android:src="@drawable/bilog"
        android:layout_marginTop="106dp"
        android:layout_marginLeft="390dp" />

    <!-- A na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/Abilog"
        android:src="@drawable/bilog"
        android:layout_marginTop="97dp"
        android:layout_marginLeft="430dp"/>



    <!-- Music Sheet -->

    <ImageView
        android:id="@+id/clef"
        android:layout_width="350dp"
        android:layout_height="160dp"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/clef" />

    <!-- Land -->

    <ImageView
        android:background="@drawable/landstone"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/land"/>



    <!-- Dummy -->

    <ImageView
        android:id="@+id/dummyleft2"
        android:layout_above="@+id/land"
        android:src="@drawable/dummyleft2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="-11dp"
        android:layout_width="90dp"
        android:layout_height="90dp" />


    <!-- Notes Buttons -->

    <RelativeLayout
        android:layout_alignBottom="@+id/land"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <!-- E Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:hint="@string/enote"
            android:background="@drawable/oval"
            android:id="@+id/enote"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="6dp"
            android:onClick="onClickenote"
            />

        <!-- F Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/oval"
            android:hint="@string/fnote"
            android:id="@+id/fnote"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/enote"
            android:layout_marginLeft="4dp"
            android:onClick="onClickfnote"
            />

        <!-- G Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/oval"
            android:hint="@string/gnote"
            android:id="@+id/gnote"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/fnote"
            android:layout_marginLeft="4dp"
            android:onClick="onClickgnote"
            />

        <!-- A Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/oval"
            android:hint="@string/anote"
            android:id="@+id/anote"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/gnote"
            android:layout_marginLeft="4dp"
            android:onClick="onClickanote"
            />

    </RelativeLayout>

    <!-- Buttons At The Top -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true">

        <!-- Pause Button -->
        <ImageButton
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_marginTop="8dp"
            android:id="@+id/pause"
            android:background="@drawable/brownpause"
            app:strokeWidth="2dp"
            android:onClick="OnClickpause"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="12dp"
            />


        <!-- Finish Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/pause"
            android:id="@+id/finish"
            android:background="@drawable/greencheck"
            app:strokeWidth="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="35dp"
            />

    </RelativeLayout>

    <!-- idle mc and boss -->

    <ImageView
        android:id="@+id/idleImageView"
        android:layout_marginBottom="-20dp"
        android:layout_marginLeft="150dp"
        android:layout_above="@+id/land"
        android:layout_width="90dp"
        android:layout_height="90dp"
        tools:srcCompat="@tools:sample/avatars" />
</RelativeLayout>