<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityPractice"
    android:orientation="horizontal"
    android:background="@drawable/battle1">
    <!-- bilog -->

    <!-- E na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/Ebilog"
        android:src="@drawable/bilog"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="310dp" />

    <!-- F na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/Fbilog"
        android:src="@drawable/bilog"
        android:layout_marginTop="117dp"
        android:layout_marginLeft="350dp"/>

    <!-- G na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/Gbilog"
        android:src="@drawable/bilog"
        android:layout_marginTop="106dp"
        android:layout_marginLeft="390dp" />

    <!-- A na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/Abilog"
        android:src="@drawable/bilog"
        android:layout_marginTop="97dp"
        android:layout_marginLeft="430dp"/>

    <!-- B na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/Bbilog"
        android:src="@drawable/bilog"
        android:layout_marginTop="88dp"
        android:layout_marginLeft="470dp"/>

    <!-- C na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/Cbilog"
        android:src="@drawable/bilog"
        android:layout_marginTop="78dp"
        android:layout_marginLeft="510dp"/>

    <!-- D na bilog -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/Dbilog"
        android:src="@drawable/bilog"
        android:layout_marginTop="67dp"
        android:layout_marginLeft="550dp"/>


    <!-- Music Sheet -->

    <ImageView
        android:id="@+id/clef"
        android:layout_width="350dp"
        android:layout_height="160dp"
        android:layout_marginLeft="235dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/clef" />

    <!-- Land -->

    <ImageView
        android:id="@+id/land"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/landstone" />


    <!-- Notes Buttons -->

    <RelativeLayout
        android:layout_alignBottom="@+id/land"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <!-- E Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:hint="@string/enote"
            android:background="@drawable/oval"
            android:id="@+id/enote"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_marginBottom="6dp"

            />

        <!-- F Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/oval"
            android:hint="@string/fnote"
            android:id="@+id/fnote"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_toRightOf="@id/enote"
            android:layout_marginLeft="4dp"
            />

        <!-- G Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/oval"
            android:hint="@string/gnote"
            android:id="@+id/gnote"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_toRightOf="@id/fnote"
            android:layout_marginLeft="4dp" />

        <!-- A Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/oval"
            android:hint="@string/anote"
            android:id="@+id/anote"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_toRightOf="@id/gnote"
            android:layout_marginLeft="4dp"
            />

        <!-- B Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/oval"
            android:hint="B"
            android:id="@+id/bnote"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_toRightOf="@id/anote"
            android:layout_marginLeft="4dp"
            />

        <!-- C Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/oval"
            android:hint="C"
            android:id="@+id/cnote"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_toRightOf="@id/bnote"
            android:layout_marginLeft="4dp"
            />

        <!-- D Note -->
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="20dp"
            android:fontFamily="@font/font"
            android:background="@drawable/oval"
            android:hint="D"
            android:id="@+id/dnote"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:layout_toRightOf="@id/cnote"
            android:layout_marginLeft="4dp"
            />



    </RelativeLayout>

    <!-- Buttons At The Top -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true">

        <!-- Pause Button -->
        <ImageButton
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_marginTop="8dp"
            android:id="@+id/pause"
            android:background="@drawable/brownpause"
            app:strokeWidth="2dp"
            android:onClick="OnClickpause"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="12dp"
            />


        <!-- Finish Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/pause"
            android:id="@+id/finish"
            android:background="@drawable/greencheck"
            app:strokeWidth="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="35dp"
            />

    </RelativeLayout>

    <!-- idle mc and boss -->

    <ImageView
        android:id="@+id/idleImageView"
        android:layout_marginBottom="-20dp"
        android:layout_marginLeft="150dp"
        android:layout_above="@+id/land"
        android:layout_width="90dp"
        android:layout_height="90dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/JapanBossImageView"
        android:layout_alignParentRight="true"
        android:layout_marginRight="170dp"
        android:layout_marginBottom="-11dp"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/dummyleft2"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_above="@+id/land"/>

    <!-- restart Button -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <!-- restart Button -->
        <ImageButton
            android:id="@+id/restart"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="67dp"
            android:background="@drawable/restartbutton"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Next1"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/exit"
            android:layout_toRightOf="@+id/restart"
            />
    </RelativeLayout>
    <!-- atk mc  and boss -->
    <ImageView
        android:id="@+id/attackImageView"
        android:layout_marginBottom="-30dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="200dp"
        android:layout_width="500dp"
        android:layout_height="150dp"
        tools:srcCompat="@tools:sample/avatars" />

    <!-- scoring -->
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/font"
        android:layout_marginTop="5dp"
        android:text="Time: ∞"
        android:textColor="@android:color/white"
        android:textSize="25dip"

        />

    <TextView
        android:id="@+id/clickview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="67dp"
        android:layout_below="@+id/timer"
        android:text="Score: "
        android:textSize="25dip"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/font"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/startbtn"
        android:fontFamily="@font/font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="Fight"
        android:backgroundTint="#DC143C"
        app:strokeWidth="2dp"
        android:layout_marginLeft="20dp"
        />
    <TextView
        android:id="@+id/scoreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="67dp"
        android:layout_centerInParent="true"
        android:text="Score: "
        android:textSize="50dip"
        android:fontFamily="@font/font"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/fightview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="FIGHT!"
        android:textSize="50dip"
        android:fontFamily="@font/font"
        android:textColor="@android:color/holo_red_dark"/>

</RelativeLayout>